WIP. JavaFx initial configs and main screen