@@ -3,6 +3,18 @@
   <groupId>pjsipphone</groupId>
   <artifactId>pjsipphone</artifactId>
   <version>0.1</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>17</version>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -11,6 +23,20 @@
         <version>3.8.1</version>
         <configuration>
           <release>17</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <configuration>
+          <mainClass>pjsipphone.MyApp</mainClass>
+          <options>
+            <option>--module-path</option>
+            <option>${env.PATH_TO_FX}/lib</option>
+            <option>--add-modules</option>
+            <option>javafx.controls,javafx.fxml</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
